refactor/add-role-assignment-message